<resources>
    <string name="app_name">iBooking</string>
    <string name="title_activity_pick_room">PickRoom</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="room_picker_message">Please select your room and preferences.</string>
    <string-array name="room_picker_type">
        <item>SINGLE</item>
        <item>DOUBLE</item>
        <item>TRIPLE</item>
    </string-array>
    <string name="cb1">Minibar</string>
    <string name="cb2">Breakfast</string>
    <string name="cb3">Fitness</string>
    <string name="cb4">Spa</string>
</resources>