<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RoomPicker">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_picker_message"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick a type of room:"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick a type of services (+$10/service):"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="23sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="Confirm" />

</LinearLayout>